css/style.css
html {
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

body {
    font-family: Roboto, "Courier New", monospace;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    gap: 30px;
}

.fill {
    flex: 1;
}

.section-one {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.header {
    padding: 12px 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    max-width: 1224px;
}

.logo {
    font-size: 24px;
    font-weight: bold;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
    gap: 16px;
}

a {
    text-decoration: none;
}

.one-content {
    display: flex;
    gap: 24px;
    margin: 60px 0;
}

.one-content div {
    max-width: 600px;
}

.hero-main {
    font-size: 48px;
    font-weight: 900;
}

.hero-secondary,
a {
    font-size: 18px;
    color: #E5E7EB;
}

.section-one button {
    margin-top: 12px;
}

.section-one img {
    width: 600px;
}

.section-two {
    text-align: center;
}

.two-title {
    font-size: 36px;
    font-weight: bold;
    margin-bottom: 30px;
}

.solution-container {
    display: flex;
    justify-content: center;
    gap: 38px;
}

.section-two img {
    height: 180px;
    width: 180px;
    border: 3px solid #3882F6;
    border-radius: 9px;
}

.section-three {
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.three-content {
    margin: 60px 0;
}

.testimonial {
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
    max-width: 1200px;
}

.customer {
    font-size: 18px;
    font-weight: bold;
    width: 350px;
    margin-left: auto;
}

.section-four {
    display: flex;
    justify-content: center;
}

.four-content {
    width: 1000px;
    padding: 30px 20px;
    margin: 10px 0 40px;
    border-radius: 8px;
    display: flex;
    justify-content: space-around;
}

.four-title {
    font-size: 18px;
    font-weight: bold;
    margin-bottom: 6px;
}

.four-desc {
    color: #E5E7EB;
}

.section-four button {
    border: 2px solid #F9FAF8;
}

.footer {
    text-align: center;
    color: #E5E7EB;
    padding: 30px;
    margin-top: -30px;
}

button {
    font-weight: bold;
    padding: 8px 16px;
    border: none;
    border-radius: 6px;
}

.dark {
    background-color: #1F2937;
}

.blue {
    background-color: #3882F6;
}

.light-text {
    color: #F9FAF8;
}

.dark-text {
    color: #1F2937;
}

